# Kaunitz

./: README.md  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml
app/: config.py
app/analytics/: Holdings.py  Strategy.py  Top5MarketCapStrategy.py  Top5MarketCapStrategyAccumulated.py  Top5MarketCapStrategyRebalanced.py  TopMarketCapStrategyAccumulated.py  TopMarketCapStrategyRebalanced.py  main.py
app/clients/: Client.py  CoinGeckoClient.py
app/dashboards/: acc_vs_reb.py  snapshot_daily.py  utils.py
app/dashboards/daily_market/: app.py
app/dashboards/visualizations/: bar.py  treemap.py
app/datasets/: CoinGecko.py  Yahoo.py
app/schemas/: DailyMarketSchema.py
app/tests/: test_CoinGeckoClient.py  test_DailyMarketSchema.py  test_data.py
app/utils/: create_tables.py  db.py
