[tool.poetry]
name = "kaunitz"
version = "0.1.0"
description = ""
authors = ["mon <36315338+desmonty@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.18.1"
fastparquet = "^2024.5.0"
numpy = "^2.1.1"
pandas = "^2.2.3"
cytoolz = "^0.12.3"
pycoingecko = "^3.1.0"
yahooquery = "^2.3.7"
polars = "^1.8.2"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
